@@ -1,6 +1,7 @@
 v. 0.17.20
 - decrease overall cost in harder logistic
 - add time evolution reduction
+- balanced recipe for angel-bio compatibility
 
 v. 0.17.19
 - fix electric-energy-accumulators-1 => electric-energy-accumulators
